--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,6 +44,8 @@ h1 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-shadow: 0 20px 80px rgba(29, 30, 53, 0.5);
+          box-shadow: 0 20px 80px rgba(29, 30, 53, 0.5);
 }
 
 .outer-container .img {
@@ -51,18 +53,26 @@ h1 {
   -webkit-transform: translateY(-130px);
           transform: translateY(-130px);
   height: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .outer-container .img__top {
-  position: absolute;
-  top: 0;
+  -webkit-transform: translatex(-1.25rem);
+          transform: translatex(-1.25rem);
   z-index: 10;
 }
 
 .outer-container .img__bottom {
-  position: absolute;
-  top: 8rem;
-  padding: 1.75rem;
+  width: 100%;
+  -webkit-transform: translateY(-75%);
+          transform: translateY(-75%);
+  padding: 1.5rem;
   z-index: 9;
 }
 
@@ -80,6 +90,7 @@ h1 {
 .faq {
   border-bottom: 1px solid #e7e7e9;
   padding: 1rem 0;
+  line-height: 1.4;
 }
 
 .faq__question {
@@ -97,6 +108,21 @@ h1 {
 
 .faq__answer {
   display: none;
+  color: rgba(120, 120, 135, 0.6);
+  font-size: 12px;
+}
+
+.faq.selected .faq__question {
+  font-weight: 900;
+}
+
+.faq.selected .faq__answer {
+  display: block;
+}
+
+.faq.selected .arrow {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 .attribution,
