--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -25,33 +25,32 @@ h1 {
 .outer-container {
   padding: 2rem;
   border-radius: 2rem;
-  //   margin: 0 auto;
   position: relative;
   display: flex;
   flex-direction: column;
   background-color: #fff;
   justify-content: center;
+  box-shadow: 0 20px 80px rgba($dark-blue, 0.5);
 
   .img {
     position: relative;
     transform: translateY(-130px);
-    // display: block;
     height: 120px;
-    // display: flex;
-    // flex-direction: column;
-    // padding: 1.75rem;
-    // flex: 1;
+    display: flex;
+    flex-direction: column;
 
     &__top {
-      position: absolute;
-      top: 0;
+      // position: absolute;
+      // top: 0;
+      transform: translatex(-1.25rem);
       z-index: 10;
     }
     &__bottom {
-      position: absolute;
-      top: 8rem;
-      //   transform: translateY(80%);
-      padding: 1.75rem;
+      // position: absolute;
+      // top: 8rem;
+      width: 100%;
+      transform: translateY(-75%);
+      padding: 1.5rem;
       z-index: 9;
     }
   }
@@ -71,6 +70,7 @@ h1 {
 .faq {
   border-bottom: 1px solid $light-gray;
   padding: 1rem 0;
+  line-height: 1.4;
 
   &__question {
     display: flex;
@@ -81,6 +81,19 @@ h1 {
 
   &__answer {
     display: none;
+    color: rgba($gray, 0.6);
+    font-size: 12px;
+  }
+}
+.faq.selected {
+  .faq__question {
+    font-weight: 900;
+  }
+  .faq__answer {
+    display: block;
+  }
+  .arrow {
+    transform: rotate(180deg);
   }
 }
 
