--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,16 +12,7 @@ body {
   background: linear-gradient(#af67e9, #6565e7) no-repeat;
   height: 100vh;
   padding: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  position: relative;
 }
 
 h1 {
@@ -32,18 +23,12 @@ h1 {
 .outer-container {
   padding: 2rem;
   border-radius: 2rem;
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  position: absolute;
+  top: 10rem;
+  left: 2rem;
+  right: 2rem;
+  text-align: center;
   background-color: #fff;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-shadow: 0 20px 80px rgba(29, 30, 53, 0.5);
           box-shadow: 0 20px 80px rgba(29, 30, 53, 0.5);
 }
@@ -52,14 +37,7 @@ h1 {
   position: relative;
   -webkit-transform: translateY(-130px);
           transform: translateY(-130px);
-  height: 120px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  height: 150px;
 }
 
 .outer-container .img__top {
@@ -69,7 +47,6 @@ h1 {
 }
 
 .outer-container .img__bottom {
-  width: 100%;
   -webkit-transform: translateY(-75%);
           transform: translateY(-75%);
   padding: 1.5rem;
@@ -91,6 +68,15 @@ h1 {
   border-bottom: 1px solid #e7e7e9;
   padding: 1rem 0;
   line-height: 1.4;
+  text-align: left;
+}
+
+.faq:hover {
+  cursor: pointer;
+}
+
+.faq:hover .faq__question {
+  font-weight: 900;
 }
 
 .faq__question {
@@ -123,6 +109,19 @@ h1 {
 .faq.selected .arrow {
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease;
+}
+
+.attribution {
+  color: #1d1e35;
+  font-size: 10px;
+  text-align: center;
+  margin-top: 1rem;
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
+  right: 1rem;
 }
 
 .attribution,
