--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,16 @@ body {
   height: 100vh;
   padding: 2rem;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 h1 {
@@ -20,47 +30,168 @@ h1 {
   text-align: center;
 }
 
-.outer-container {
-  padding: 2rem;
+@media (min-width: 900px) {
+  h1 {
+    text-align: left;
+  }
+}
+
+.container {
+  width: calc(100vw - 200px);
+  max-width: 1000px;
+  margin: 20px auto;
+  position: relative;
   border-radius: 2rem;
-  position: absolute;
-  top: 10rem;
-  left: 2rem;
-  right: 2rem;
-  text-align: center;
   background-color: #fff;
   -webkit-box-shadow: 0 20px 80px rgba(29, 30, 53, 0.5);
           box-shadow: 0 20px 80px rgba(29, 30, 53, 0.5);
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -ms-grid-rows: minmax(200px, min-content);
+      grid-template-rows: minmax(200px, -webkit-min-content);
+      grid-template-rows: minmax(200px, min-content);
+  grid-auto-rows: 100%;
 }
 
-.outer-container .img {
+@media (max-width: 900px) {
+  .container {
+    -ms-grid-rows: (min-content)[2];
+        grid-template-rows: repeat(2, -webkit-min-content);
+        grid-template-rows: repeat(2, min-content);
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
+.container .box {
+  position: absolute;
+  z-index: 999;
+  top: 205px;
+  left: -93px;
+}
+
+.container .img__container {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
   position: relative;
-  -webkit-transform: translateY(-130px);
-          transform: translateY(-130px);
-  height: 150px;
 }
 
-.outer-container .img__top {
-  -webkit-transform: translatex(-1.25rem);
-          transform: translatex(-1.25rem);
-  z-index: 10;
+.container .img__container .img__mobile {
+  z-index: 1;
+  height: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transform: translate(-10px, -18px);
+          transform: translate(-10px, -18px);
 }
 
-.outer-container .img__bottom {
-  -webkit-transform: translateY(-75%);
-          transform: translateY(-75%);
-  padding: 1.5rem;
-  z-index: 9;
+.container .img__container .img__mobile--bottom {
+  -webkit-transform: translate(14px, -86px);
+          transform: translate(14px, -86px);
 }
 
-.inner-container {
+@media (min-width: 900px) {
+  .container .img__container .img__mobile {
+    display: none;
+  }
+}
+
+.container .img__container .img__desktop {
+  position: relative;
+  height: 100%;
+  width: auto;
+}
+
+.container .img__container .img__desktop--box {
+  position: absolute;
+  top: 14vmax;
+  left: -93px;
+  z-index: 999;
+}
+
+@media (max-width: 1000px) {
+  .container .img__container .img__desktop--box {
+    width: 160px;
+    top: 14.5vmax;
+    left: -78px;
+  }
+}
+
+.container .img__container .img__desktop--inner {
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+}
+
+.container .img__container .img__desktop--inner-top {
+  position: absolute;
+  top: 9%;
+  left: -18%;
+  width: 100%;
+  z-index: 100;
+}
+
+.container .img__container .img__desktop--inner-bottom {
+  position: absolute;
+  width: 170%;
+  top: -200px;
+  left: -87%;
+}
+
+.container .img__container .img__desktop--pattern {
+  position: absolute;
+  -webkit-transform: translate(-80px, -50%);
+          transform: translate(-80px, -50%);
+  width: 100%;
+}
+
+@media (max-width: 900px) {
+  .container .img__container .img__desktop {
+    display: none;
+  }
+}
+
+.faq__container {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  padding: 4rem;
   color: #4a4b5e;
-  -webkit-box-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
 }
 
-.faq-container {
+@media (min-width: 900px) {
+  .faq__container {
+    padding: 4rem 6rem 4rem 2rem;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2 / 3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+  }
+}
+
+.faq-inner-container {
   margin: 1.5rem 0;
 }
 
@@ -76,7 +207,7 @@ h1 {
 }
 
 .faq:hover .faq__question {
-  font-weight: 900;
+  color: #f47c57;
 }
 
 .faq__question {
