--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -12,63 +12,142 @@ body {
   background: linear-gradient($violet, $blue) no-repeat;
   height: 100vh;
   padding: 2rem;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 h1 {
   font-size: 2.8rem;
   text-align: center;
+  @media (min-width: $tablet) {
+    text-align: left;
+  }
 }
 
-.outer-container {
-  padding: 2rem;
+.container {
+  width: calc(100vw - 200px);
+  max-width: 1000px;
+  margin: 20px auto;
+  position: relative;
   border-radius: 2rem;
-  position: absolute;
-  top: 10rem;
-  left: 2rem;
-  right: 2rem;
-
-  // display: flex;
-  // flex-direction: column;
-  text-align: center;
   background-color: #fff;
-  // justify-content: center;
   box-shadow: 0 20px 80px rgba($dark-blue, 0.5);
 
-  .img {
-    position: relative;
-    transform: translateY(-130px);
-    height: 150px;
-    // display: flex;
-    // flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: minmax(200px, min-content);
+  grid-auto-rows: 100%;
 
-    &__top {
-      // position: absolute;
-      // top: 0;
-      transform: translatex(-1.25rem);
-      z-index: 10;
+  @media (max-width: $tablet) {
+    grid-template-rows: repeat(2, min-content);
+    grid-template-columns: 1fr;
+  }
+
+  .box {
+    position: absolute;
+    z-index: 999;
+    top: 205px;
+    left: -93px;
+  }
+
+  .img__container {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    position: relative;
+
+    .img__mobile {
+      z-index: 1;
+      height: 120px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      transform: translate(-10px, -18px);
+
+      &--top {
+        // position: absolute;
+        // top: -130px;
+        // left: 0;
+      }
+      &--bottom {
+        // position: absolute;
+        // top: -20px;
+        // left: 24px;
+        transform: translate(14px, -86px);
+      }
+      @media (min-width: $tablet) {
+        display: none;
+      }
     }
-    &__bottom {
-      // position: absolute;
-      // top: 8rem;
-      transform: translateY(-75%);
-      padding: 1.5rem;
-      z-index: 9;
+
+    .img__desktop {
+      position: relative;
+      height: 100%;
+      width: auto;
+
+      &--box {
+        position: absolute;
+        // width: 38%;
+        top: 14vmax;
+        left: -93px;
+        z-index: 999;
+        @media (max-width: 1000px) {
+          width: 160px;
+          top: 14.5vmax;
+          left: -78px;
+        }
+      }
+
+      &--inner {
+        overflow: hidden;
+        position: relative;
+        height: 100%;
+
+        &-top {
+          position: absolute;
+          top: 9%;
+          left: -18%;
+          // transform: translate(-8px, 75%);
+          width: 100%;
+          z-index: 100;
+        }
+        &-bottom {
+          position: absolute;
+          width: 170%;
+          top: -200px;
+          left: -87%;
+          // transform: translate(0, -50%);
+        }
+      }
+
+      &--pattern {
+        position: absolute;
+        transform: translate(-80px, -50%);
+        width: 100%;
+      }
+      @media (max-width: $tablet) {
+        display: none;
+      }
     }
   }
 }
 
-.inner-container {
-  //   transform: translateY(50%);
-  //   padding: 12rem 2rem 4rem 2rem;
+.faq__container {
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
+  padding: 4rem;
   color: $dark-gray;
-  flex: 2;
+
+  @media (min-width: $tablet) {
+    padding: 4rem 6rem 4rem 2rem;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
 }
 
-.faq-container {
+.faq-inner-container {
   margin: 1.5rem 0;
 }
 
@@ -80,7 +159,7 @@ h1 {
   &:hover {
     cursor: pointer;
     .faq__question {
-      font-weight: 900;
+      color: $orange-red;
     }
   }
 
