--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -72,11 +72,9 @@ h1 {
         // left: 0;
       }
       &--bottom {
-        // position: absolute;
-        // top: -20px;
-        // left: 24px;
         transform: translate(14px, -86px);
       }
+
       @media (min-width: $tablet) {
         display: none;
       }
@@ -89,14 +87,18 @@ h1 {
 
       &--box {
         position: absolute;
-        // width: 38%;
-        top: 14vmax;
+        top: 40%;
         left: -93px;
         z-index: 999;
-        @media (max-width: 1000px) {
+        @media (max-width: 1120px) {
           width: 160px;
-          top: 14.5vmax;
+          top: 13vmax;
           left: -78px;
+        }
+        @media (max-width: 1000px) {
+          width: 140px;
+          top: 11vmax;
+          left: -69px;
         }
       }
 
@@ -109,7 +111,6 @@ h1 {
           position: absolute;
           top: 9%;
           left: -18%;
-          // transform: translate(-8px, 75%);
           width: 100%;
           z-index: 100;
         }
@@ -118,7 +119,9 @@ h1 {
           width: 170%;
           top: -200px;
           left: -87%;
-          // transform: translate(0, -50%);
+          @media (max-width: 1000px) {
+            transform: translateY(10%);
+          }
         }
       }
 
