final edits and adjustments

--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -13,5 +13,6 @@ $light-gray: hsl(240, 5%, 91%);
 // LAYOUT
 
 $mobile: 375px;
-$tablet: 900px;
+$tablet-01: 768px;
+$tablet-02: 900px;
 $desktop: 1440px;
