--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,14 @@ body {
           justify-content: center;
 }
 
+@media (max-width: 768px) {
+  body {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
 h1 {
   font-size: 2.8rem;
   text-align: center;
@@ -65,11 +73,12 @@ h1 {
   }
 }
 
-.container .box {
-  position: absolute;
-  z-index: 999;
-  top: 205px;
-  left: -93px;
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+    -webkit-transform: translateY(80px);
+            transform: translateY(80px);
+  }
 }
 
 .container .img__container {
@@ -206,6 +215,12 @@ h1 {
   }
 }
 
+@media (max-width: 768px) {
+  .faq__container {
+    padding: 3rem;
+  }
+}
+
 .faq-inner-container {
   margin: 1.5rem 0;
 }
@@ -263,7 +278,6 @@ h1 {
   color: #1d1e35;
   font-size: 10px;
   text-align: center;
-  margin-top: 1rem;
   position: absolute;
   bottom: 1rem;
   left: 1rem;
@@ -275,6 +289,5 @@ h1 {
   color: #1d1e35;
   font-size: 10px;
   text-align: center;
-  margin-top: 1rem;
 }
 /*# sourceMappingURL=styles.css.map */
