--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -16,12 +16,16 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  @media (max-width: $tablet-01) {
+    justify-content: flex-start;
+  }
 }
 
 h1 {
   font-size: 2.8rem;
   text-align: center;
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-02) {
     text-align: left;
   }
 }
@@ -40,16 +44,14 @@ h1 {
   grid-template-rows: minmax(200px, min-content);
   grid-auto-rows: 100%;
 
-  @media (max-width: $tablet) {
+  @media (max-width: $tablet-02) {
     grid-template-rows: repeat(2, min-content);
     grid-template-columns: 1fr;
   }
 
-  .box {
-    position: absolute;
-    z-index: 999;
-    top: 205px;
-    left: -93px;
+  @media (max-width: $tablet-01) {
+    width: 100%;
+    transform: translateY(80px);
   }
 
   .img__container {
@@ -66,16 +68,11 @@ h1 {
       align-items: center;
       transform: translate(-10px, -18px);
 
-      &--top {
-        // position: absolute;
-        // top: -130px;
-        // left: 0;
-      }
       &--bottom {
         transform: translate(14px, -86px);
       }
 
-      @media (min-width: $tablet) {
+      @media (min-width: $tablet-02) {
         display: none;
       }
     }
@@ -130,7 +127,7 @@ h1 {
         transform: translate(-80px, -50%);
         width: 100%;
       }
-      @media (max-width: $tablet) {
+      @media (max-width: $tablet-02) {
         display: none;
       }
     }
@@ -143,10 +140,14 @@ h1 {
   padding: 4rem;
   color: $dark-gray;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-02) {
     padding: 4rem 6rem 4rem 2rem;
     grid-column: 2 / 3;
     grid-row: 1 / 2;
+  }
+
+  @media (max-width: $tablet-01) {
+    padding: 3rem;
   }
 }
 
@@ -196,7 +197,6 @@ h1 {
   color: $dark-blue;
   font-size: 10px;
   text-align: center;
-  margin-top: 1rem;
   position: absolute;
   bottom: 1rem;
   left: 1rem;
@@ -208,5 +208,4 @@ h1 {
   color: $dark-blue;
   font-size: 10px;
   text-align: center;
-  margin-top: 1rem;
 }
